@@ -2,10 +2,15 @@
 = ruote-couch - CHANGELOG.txt
 
 
+== ruote-couch 2.1.5    not yet released
+
+- implemented CouchStorage#by_wfid and #by_participant
+
+
 == ruote-couch 2.1.4    released 2009/01/11
 
-- Ruote::Couch::Storage added #ids(type)
-- Ruote::Couch::Storage added #purge_type!(t)
+- Ruote::Couch::CouchStorage added #ids(type)
+- Ruote::Couch::CouchStorage added #purge_type!(t)
 
 
 == ruote-couch 2.1.3    released 2009/01/05
